--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github</title>
 </head>
+<style href="./miEstilo.css">
 <body>
     <p>Proyecto desde Github clonado en VSC<br/>
     [view][Command palette..]Git clone</p>
